# AGENTIC--AI-ASSISTANT-

./: .gitignore  JARVIS-V1-DESIGN.md  PRD-jarvis-v1.md  README.md  dictionary.txt  pyproject.toml
.scratch/jarvis-v1/: PRD.md  README.md
benches/overlay_shots/: README.md
benches/vram_coexist/: README.md  run_bench.py
benches/wake_word_ab/: DECISION.md  README.md  __init__.py  detectors.py  metrics.py  requirements.txt  run_bench.py
docs/: spotify-setup.md
jarvis/: __init__.py  __main__.py  audit.py  autostart.py  cli.py  compound.py  config.py  confirm.py  connectivity.py  core.py  dialogue.py  events.py  hands.py  paths.py  perception.py  plain_replies.py  reflex_humility.py  resident.py  settings.py  tasks.py  tray.py  types.py  voice.py
jarvis-proto/: DELETED.md  NOTES.md  README.md  brain.mjs  jarvis-tui.mjs  voice-server.mjs  voice.html
jarvis/apps/: __init__.py  catalog.py  handler.py  intents.py
jarvis/audio/: __init__.py  capture.py  silence.py
jarvis/brain/: __init__.py  base.py  claude_code.py  fake.py  grok_cli.py  mcp_bridge.py  shell_policy.py  stream_json.py
jarvis/google/: base.py  (+8 more)
tests/: conftest.py  test_acceptance_pack.py  test_acceptance_pack_os_smoke.py  test_apps.py  test_ask_first.py  test_audit.py  test_claude_code_args.py  test_cli.py  test_cli_daemon.py  test_cli_google.py  test_cli_listen.py  test_cli_polish.py  test_cli_spotify.py  test_compound.py  test_dialogue.py  test_dictionary.py  test_event_bus.py  test_google_workspace.py  test_graceful_degradation.py  test_grok_cli_args.py  test_handle_command.py  test_local_media.py  test_long_tasks.py  test_mcp_bridge.py  test_mcp_bridge_handshake.py  test_mcp_bridge_live.py  test_mcp_bridge_scenario.py  test_memory.py  test_os_smoke.py  test_overlay_lifecycle.py  test_overlay_widget.py  test_perception.py  test_perception_os_smoke.py  test_piper.py  test_resident.py  test_settings.py  test_shell_file_tools.py  test_shell_file_tools_os_smoke.py  test_silence.py  test_smoke_claude.py  (+10 more)
(+80 files in other folders)
