[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
description = "JARVIS v1 — Windows-first voice-driven assistant (headless core loop)"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
jarvis = "jarvis.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "smoke: optional real Claude CLI smoke tests (skipped by default)",
]
