[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
description = "JARVIS v1 — Windows-first voice-driven assistant (headless core loop)"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
voice = [
    "numpy>=1.26",
    "sounddevice>=0.4",
    "faster-whisper>=1.0",
]
wake = [
    "numpy>=1.26",
    "sounddevice>=0.4",
    "openwakeword>=0.6.0",
    "pvporcupine>=3.0.0",
    "pynput>=1.7",
]
ui = [
    "PySide6>=6.6",
]
google = [
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "google-api-python-client>=2.0",
]
all = [
    "pytest>=8.0",
    "numpy>=1.26",
    "sounddevice>=0.4",
    "faster-whisper>=1.0",
    "openwakeword>=0.6.0",
    "pvporcupine>=3.0.0",
    "pynput>=1.7",
    "PySide6>=6.6",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-auth-httplib2>=0.2",
    "google-api-python-client>=2.0",
]


[project.scripts]
jarvis = "jarvis.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "smoke: optional real Claude CLI smoke tests (skipped by default)",
]
